logs/watchdog_20251011_1715.log
[11/10/2025 17:15:01,70] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 17:15:02,00] END WATCHDOG 
